Update AWS access request to include E-QIP
Added line #7 with description of need for E-QIP transmittal date 

Added Checkbox.

--- a/.github/ISSUE_TEMPLATE/aws-access-request.yml
+++ b/.github/ISSUE_TEMPLATE/aws-access-request.yml
@@ -13,6 +13,7 @@ body:
         4. Do not remove `operations` label or the `ops-access-request` label; this will notify the VSP Operations team of your request
         5. Add additional info as a comment after GitHub issue is created if you select 'Other' for any of the form inputs.
         6. When the issue is closed you will be notified and can continue with on-boarding setup
+        7. Validate that your E-QIP process has been started with your Vendor Onboarding Representative (listed below in a dropdown). If you have not started your E-QIP process, do NOT put in a request. 
   - type: dropdown
     id: cor-name
     attributes:
@@ -43,6 +44,14 @@ body:
         - Accenture Federal Services - Alexa Elliot
         - Other - please specify in 'Additional Notes'
     validations:
+      required: true
+   - type: checkboxes
+    attributes:
+      label: E-QIP Transmittal Date
+      description: Have you started your E-QIP process?
+      options:
+      - label: "Check this box if you have an E-QIP transmittal date. If not, do not submit this ticket. You will not be granted access without one. If you aren't sure, ask your Vendor Onboarding Representative."
+      validations:
       required: true
   - type: input
     id: requestor-name
