--- a/.github/ISSUE_TEMPLATE/collaboration-cycle-request.yml
+++ b/.github/ISSUE_TEMPLATE/collaboration-cycle-request.yml
@@ -21,14 +21,14 @@ body:
         **Fields marked with an asterisk (*) are required.**
   - type: markdown
     attributes:
-      value: "## VFS product information"
+      value: "## VFS product or feature information"
   - type: checkboxes
     id: verify-directory
     attributes:
-      label: If your product is already on VA.gov, please verify your product information in the Product Directory.
+      label: If your product or feature is already on VA.gov, please verify your information in the Product Directory.
       description: See the [Product Directory page](https://depo-platform-documentation.scrollhelp.site/getting-started/vfs-product-directory) on Platform website.
       options:
-        - label: The product information in the Product Directory is accurate.
+        - label: The product or feature information in the Product Directory is accurate.
           required: true
   - type: input
     id: product-team
@@ -42,12 +42,14 @@ body:
     id: product-name
     attributes:
       label: Product name
+      description: See [terms and definitions on products vs. features](https://depo-platform-documentation.scrollhelp.site/getting-started/product-operations-terms-and-definition).
     validations:
       required: true
   - type: input
     id: feature-name
     attributes:
       label: Feature name
+      description: See [terms and definitions on products vs. features](https://depo-platform-documentation.scrollhelp.site/getting-started/product-operations-terms-and-definition).
     validations:
       required: true
   - type: input
@@ -68,7 +70,7 @@ body:
     id: start-date
     attributes:
       label: When did/will you start working on this product/feature?
-    validations:
+        validations:
       required: true
   - type: markdown
     attributes:
@@ -76,7 +78,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Please refer to the guidance in [Collaboration Cycle Kickoff](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/Getting-started.1760493650.html) for detailed information and examples for the below questions.
+        Please refer to the guidance on the [Collaboration Cycle Kickoff](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/Getting-started.1760493650.html) page on Platform Website for detailed information and examples regarding these questions (below).
   - type: dropdown
     id: visible-changes
     attributes:
