--- a/.github/ISSUE_TEMPLATE/application-onboarding.yml
+++ b/.github/ISSUE_TEMPLATE/application-onboarding.yml
@@ -44,6 +44,14 @@ body:
     validations:
       required: true
   - type: input
+    id: branch
+    attributes:
+      label: Branch
+      description: Branch to deploy from (applies only to Dev)
+      placeholder: main
+    validations:
+      required: true
+  - type: input
     id: maintainer
     attributes:
       label: Maintainer(s)
