--- a/.github/ISSUE_TEMPLATE/aws-access-request.yml
+++ b/.github/ISSUE_TEMPLATE/aws-access-request.yml
@@ -127,3 +127,9 @@ body:
       - label: "If user is on a VFS team but not in the VFS Team Roster, add the 'NOT YET' label and instruct them to start the Platform orientation process https://depo-platform-documentation.scrollhelp.site/getting-started/Platform-Orientation.1877344532.html"
       - label: "If a user is on a Platform team but not on the Platform Team Roster in Confluence, add the 'NOT YET' label and instruct them to reach out to their Product Manager to be added."
       - label: "Comment in this issue saying which roster the user is listed in."
+  - type: checkboxes
+    attributes: 
+      label: User must have an EQUIP date
+      description: This must be verified by access requestor before access will be assessed and granted
+      options:
+      - label: "I have verified that the EQUIP process has begun and an EQUIP date exists for this Team member" 
