--- a/.github/ISSUE_TEMPLATE/collaboration-cycle-request.yml
+++ b/.github/ISSUE_TEMPLATE/collaboration-cycle-request.yml
@@ -25,10 +25,9 @@ body:
   - type: checkboxes
     id: verify-directory
     attributes:
-      label: If your product or feature is already on VA.gov, please verify your information in the Product Directory.
-      description: See the [Product Directory page](https://depo-platform-documentation.scrollhelp.site/getting-started/vfs-product-directory) on Platform website.
+      label: Verify information about your product or feature in the VFS Product Directory.
       options:
-        - label: The product or feature information in the Product Directory is accurate.
+        - label: I have reviewed the [VFS Product Directory](https://depo-platform-documentation.scrollhelp.site/getting-started/vfs-product-directory) and confirm that my information is correct (or that I have taken appropriate actions to update or add my product information to the directory).
           required: true
   - type: input
     id: product-team
@@ -70,7 +69,7 @@ body:
     id: start-date
     attributes:
       label: When did/will you start working on this product/feature?
-        validations:
+    validations:
       required: true
   - type: markdown
     attributes:
