--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,10 @@
 {
   "image": "ghcr.io/devcontainers/features/git-lfs:1",
+  "hostRequirements": {
+   "cpus": 8,
+   "memory": "16gb",
+   "storage": "32gb"
+  },
   "features": {
   }
 }
