--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
+  "name": "Codespace to perform va.gov-team repository",
   "image": "ghcr.io/devcontainers/features/git-lfs:1",
   "hostRequirements": {
    "cpus": 8,
    "memory": "16gb",
    "storage": "32gb"
-  },
-  "features": {
   }
 }
